--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html><html><head><title>Page Title</title><meta charset="utf-8">  
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script language=javascript type="text/javascript">
-    document.write("Hello World!");
-</script>
+<!DOCTYPE html><html><head><title>Tiago Rafael Amaral Reis</title><meta charset="utf-8">  <meta name="viewport" content="width=device-width, initial-scale=1">  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script><script language=javascript type="text/javascript">
+date1 = new Date();date2 = new Date('2017/08/25');var diferenca = Math.abs(date1 - date2); //diferença em milésimos e positivovar dia = 1000*60*60*24; // milésimos de segundo correspondente a um diavar total = Math.round(diferenca/dia); //valor total de dias arredondado 
+document.write ("<div class='container'><h1>Quantos dias faltam para as provas?</h1>"+"<div class='panel panel-primary'>"+"<div class='panel-heading'>Provas de C&aacutelculo I</div>"+"<div class='panel-body' >"+" <button type='button' class='btn btn-primary'>Prova 1 <span class='badge'>"+total+"</span></button>"); 
+date2 = new Date('2017/09/29');var diferenca = Math.abs(date1 - date2); //diferença em milésimos e positivovar dia = 1000*60*60*24; // milésimos de segundo correspondente a um diavar total = Math.round(diferenca/dia); //valor total de dias arredondado document.write (" <button type='button' class='btn btn-success'>Prova 2 <span class='badge'>"+total+"</span></button>"); 
+date2 = new Date('2017/10/27');var diferenca = Math.abs(date1 - date2); //diferença em milésimos e positivovar dia = 1000*60*60*24; // milésimos de segundo correspondente a um diavar total = Math.round(diferenca/dia); //valor total de dias arredondado document.write (" <button type='button' class='btn btn-warning'>Prova 3 <span class='badge'>"+total+"</span></button>"); 
+date2 = new Date('2017/11/24');var diferenca = Math.abs(date1 - date2); //diferença em milésimos e positivovar dia = 1000*60*60*24; // milésimos de segundo correspondente a um diavar total = Math.round(diferenca/dia); //valor total de dias arredondado document.write (" <button type='button' class='btn btn-info'>Prova 4 <span class='badge'>"+total+"</span></button>"); 
+date2 = new Date('2017/12/08');var diferenca = Math.abs(date1 - date2); //diferença em milésimos e positivovar dia = 1000*60*60*24; // milésimos de segundo correspondente a um diavar total = Math.round(diferenca/dia); //valor total de dias arredondado document.write (" <button type='button' class='btn btn-danger'>Substitutiva <span class='badge'>"+total+"</span></button></div></div>"); 
+dayName = new Array ("domingo", "segunda", "terça", "quarta", "quinta", "sexta", "sábado")monName = new Array ("janeiro", "fevereiro", "março", "abril", "maio", "junho", "agosto", "outubro", "novembro", "dezembro")now = new Datedocument.write ("<div class='alert alert-info'> <strong>Hellow!</strong><h4> Hoje &eacute " + dayName[now.getDay() ] + ", " + now.getDate () + " de " + monName [now.getMonth() ]   +  " de "  +     now.getFullYear () + ". </h4></div>");</script>
 </head><body>
- <img src="http://2.bp.blogspot.com/-iV8L-3Sks6U/TpOaUKWpkkI/AAAAAAAAAAk/S3gHm_uErpE/s1600/1306193604188_f.jpg" class="img-rounded" alt="Vamo la" width="304" height="236"> <div class="alert alert-danger">  <strong>Aten&ccedil&atildeo!!</strong> Essa p&aacutegina nos informa quantos dias faltam para as provas de c&aacutelculo I.<br>
-  Para isso a data do seu computador tem que estar atualizada!
-  </div>
-</div>
-  <div class="container">  <h2>Panel Heading</h2>  <div class="panel panel-default">    <div class="panel-heading">Panel Heading</div>    <div class="panel-body">Panel Content</div>  </div></div>
-  </body></html> 
+ <img src="http://2.bp.blogspot.com/-iV8L-3Sks6U/TpOaUKWpkkI/AAAAAAAAAAk/S3gHm_uErpE/s1600/1306193604188_f.jpg" class="img-rounded" alt="Vamo la" width="304" height="236"> <div class="alert alert-danger">  <strong>Aten&ccedil&atildeo!!</strong> Essa p&aacutegina nos informa quantos dias faltam para as provas de c&aacutelculo I.<br>Para isso a data do seu computador tem que estar atualizada!</div>
+</div></body></html> 
