--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<img src="http://www.mat.ufmg.br/gaal/gaal.gif" alt=" Geometria Anal&iacutetica" style="width:100%;"></a>
 					</div>
 					<div class="item">
-						<a href="stadin.html"><h1 align="center">Sistemas de Apoio a Decis&atildeo e Intelig&ecircncia de Neg&oacutecios</h1>
+						<a href="sadin.html"><h1 align="center">Sistemas de Apoio a Decis&atildeo e Intelig&ecircncia de Neg&oacutecios</h1>
 					<img src="http://cetinozalit.com.tr/hizmetresimleri/800/Faaliyet_Raporu_OG3J37PW.png" alt="Tiago" style="width:100%;"> </a>
 					</div>
 					<div class="item">
