--- a/sadin.html
+++ b/sadin.html
@@ -22,6 +22,9 @@
 					<i class="fa fa-file-pdf-o" style="font-size:48px;color:green"></i>CAP. 1 Livro Power</a><br><br>
 					 <a href="https://drive.google.com/file/d/0B_A9kHIJ-IgbMDdxaEc2eFRMenM/view?usp=sharing">
 					<i class="fa fa-file-pdf-o" style="font-size:48px;color:green"></i>CAP. 2 Livro Power</a><br><br>
+					 <a href="https://drive.google.com/file/d/0B_A9kHIJ-IgbSW9sRHJDeXJWbzQ/view?usp=sharing">
+					<i class="fa fa-file-pdf-o" style="font-size:48px;color:green"></i>CAP. 3 Livro Power</a><br><br>
+
 				</div>
 			
 			</div>
