--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<img src="http://cetinozalit.com.tr/hizmetresimleri/800/Faaliyet_Raporu_OG3J37PW.png" alt="Tiago" style="width:100%;"> </a>
 					</div>
 					<div class="item">
-						<img src="http://a.espncdn.com/i/teamlogos/mlb/500-dark/scoreboard/atl.png" alt="Tiago" style="width:100%;">
+						<img src="https://scontent.fbsb9-1.fna.fbcdn.net/v/t1.0-9/18740645_1559861424025627_6024660535592259625_n.jpg?oh=88eb713e037003e7f825b7fd6e92bc87&oe=5A25C677" alt="Tiago" style="width:100%;">
 					</div> 
 				</div>
 				<!-- Left and right controls --> 
