--- a/ga.html
+++ b/ga.html
@@ -1,2 +1,30 @@
-<html><head><title>Tiago Rafael Amaral CCO- Geometria Anal&iacutetica</title><meta charset="utf-8"> <meta name="viewport" content="width=device-width, initial-scale=1"> <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script><script language=javascript type="text/javascript">
-</script></head><body><div class="alert alert-warning">    <strong>Aten&ccedil&atildeo!</strong> P&aacutegina em constru&ccedil&atildeo.  </div> <div class="container"><h1>Gemometria Anal&iacutetica</h1> <div class="panel panel-primary">      <div class="panel-heading">Livro Texto da mat&eacuteria</div>      <div class="panel-body"><a href="https://drive.google.com/file/d/0BxiohcVyV_aIWU9WQi1aOXRhN28/view?usp=sharing"><i class="fa fa-file-pdf-o" style="font-size:48px;color:red"></i></a></div>    </div>  </div></html>
+<html>
+	<head>
+		<title>Tiago Rafael Amaral CCO- Geometria Anal&iacutetica</title>
+		<meta charset="utf-8"> <meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script language=javascript type="text/javascript">
+</script>
+	</head>
+	<body>
+		<div class="alert alert-warning">
+			<strong>Aten&ccedil&atildeo!</strong> P&aacutegina em constru&ccedil&atildeo. 
+		</div> <div class="container">
+		<h1>Gemometria Anal&iacutetica</h1>
+		<div class="panel panel-primary"> 
+			<div class="panel-heading">Livro Texto da mat&eacuteria</div>
+			<div class="panel-body">
+				<a href="https://drive.google.com/file/d/0BxiohcVyV_aIWU9WQi1aOXRhN28/view?usp=sharing">
+					<i class="fa fa-file-pdf-o" style="font-size:48px;color:red"></i> Livro
+				</a><br>
+				<a href="https://drive.google.com/file/d/0B_A9kHIJ-IgbN1M5TWI5dmFRYWs/view?usp=sharing">
+					<i class="fa fa-file-pdf-o" style="font-size:48px;color:red"></i> Resumo Matriz
+				</a><br>
+				
+			</div> 
+		</div>  
+		</div>
+		</html>
