--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
   </div>
 </div>
   <a href="ItajubApp.apk">Aplicativo</a>
+  <script type="text/javascript" src="//rf.revolvermaps.com/0/0/7.js?i=5cugliocs5f&amp;m=0&amp;c=ff0000&amp;cr1=ffffff&amp;sx=0" async="async"></script>
 </body>
 </html>
 
