--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </div>
 </div>
   <a href="ItajubApp.apk">Aplicativo</a>
-  <script type="text/javascript" src="//rf.revolvermaps.com/0/0/7.js?i=5cugliocs5f&amp;m=0&amp;c=ff0000&amp;cr1=ffffff&amp;sx=0" async="async"></script>
+  <a href="https://www.revolvermaps.com/?target=enlarge&amp;i=5yzsctuolir"><img src="//rf.revolvermaps.com/h/m/a/0/ff0000/128/0/5yzsctuolir.png" width="256" height="128" alt="Map" style="border:0;"></a>
 </body>
 </html>
 
