--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     </style>
 
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-    <script src="js/playback.js"></script>
-    <script src="js/metronome.js"></script>
+    <script src="playback.js"></script>
+    <script src="metronome.js"></script>
 </head>
 
 <body>
