--- a/index.html
+++ b/index.html
@@ -1,41 +1,45 @@
-<!doctype html>
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Metronome</title>
-    <style type="text/css">
-    	div {text-align : center;}
-    </style>
-
-    <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-    <script src="playback.js"></script>
-    <script src="metronome.js"></script>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </head>
+<body style="background-color:powderblue;">
 
-<body>
-	<div id="center">
-    	<h1>Web Audio API Metronome</h1>
-    </div>
-    <div id="center">
-    	Time Signature
-    	<p>
-		<input type="number" id="sigUpper" min="1" max="500"> / 
-        <input type="number" id="sigLower" min="1" max="64"> 
-		<p>
-	</div>
-	<div id="center">
-		BPM
-    	<p>
-	    <button id="downTempo"> - </button>
-	    <input type="number" id="tempo" min="1" max="500">
-	    <button id="upTempo"> + </button>
-	    <br>
-	    <button id="play"> Play </button>
-        <br>
-        <br>
-        <canvas id="myCanvas" width="500" height="100" style="border:1px solid #d3d3d3;">
-            Your browser does not support the HTML5 canvas tag.</canvas>
-	</div>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <!-- Brand -->
+  <a class="navbar-brand" href="#">Realidade Mista</a>
+
+  <!-- Links -->
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="#">facebook do autor</a>
+    </li>
+    
+  </ul>
+</nav>
+<br>
+  
+<div class="container bg-dark text-white">
+  <h3>Realidade Mista:  O Conceito
+  <small>A computação pessoal evolouiu para uma nova era.
+  Houve a época da tela que apenas mostrava letras sendo digitadas,
+  depois a tela que podia ser clicada, e depois a tela que podia ser tocada.
+  E agora estamos em uma era
+  que não precisamos de tela nenhuma. Esse blog tem objetivo de atualizar
+  os brasileiros do mundo atual.</br>
+  O futuro que muito de nós esperava, agora já existe. O Computador Holográfico.
+  </small></h3>
+  <center>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/upWRwTbS6bw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+  </iframe>
+  </center>
+</div>
+
 </body>
-
 </html>
