--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="#">facebook do autor</a>
+      <a class="nav-link" href="https://www.facebook.com/tiago.rafael.370">facebook do autor</a>
     </li>
     
   </ul>
