--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   E agora estamos em uma era
   que não precisamos de tela nenhuma. Esse blog tem objetivo de atualizar
   os brasileiros do mundo atual.</br>
-  O futuro que muito de nós esperava, agora já existe. O Computador Holográfico.
+  O futuro que muito de nós esperava, agoraaaaaaa já existe. O Computador Holográfico.
   </small></h3>
   <center>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/upWRwTbS6bw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
