--- a/nova_geracao.html
+++ b/nova_geracao.html
@@ -19,7 +19,7 @@
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="https://www.facebook.com/tiago.rafael.370">facebook da lanchonete</a>
+      <a class="nav-link" href="https://www.facebook.com/adaiurd.santos">facebook da lanchonete</a>
     </li>
     
   </ul>
