--- a/nova_geracao.html
+++ b/nova_geracao.html
@@ -32,7 +32,7 @@
   
   </small></h3>
   <center>
-<img src="https://scontent.fbsb9-1.fna.fbcdn.net/v/t1.0-9/22365482_111401572950011_8129464204994936914_n.jpg?_nc_cat=0&oh=1e4295feb658333c2cf751cd2a1bfe16&oe=5B823B1F" class="rounded img-fluid" alt="Lanche">
+<img src="//c1.staticflickr.com/1/979/40368922510_4f86bf9731_z.jpg" class="rounded img-fluid" alt="Lanche">
   
   </center>
   
