--- a/nova_geracao.html
+++ b/nova_geracao.html
@@ -32,7 +32,7 @@
   
   </small></h3>
   <center>
-<img src="//c1.staticflickr.com/1/979/40368922510_4f86bf9731_z.jpg" class="rounded img-fluid" alt="Lanche">
+<img src="https://scontent.fbsb9-1.fna.fbcdn.net/v/t1.0-9/32440497_1928166683861764_1434304276959592448_n.jpg?_nc_cat=0&oh=f5718c5fe4d9f1541b739cb05b7ba03d&oe=5B99D290" class="rounded img-fluid" alt="Lanche">
   
   </center>
   
