--- a/nova_geracao.html
+++ b/nova_geracao.html
@@ -34,9 +34,79 @@
   <center>
 <img src="https://scontent.fbsb9-1.fna.fbcdn.net/v/t1.0-9/32440497_1928166683861764_1434304276959592448_n.jpg?_nc_cat=0&oh=f5718c5fe4d9f1541b739cb05b7ba03d&oe=5B99D290" class="rounded img-fluid" alt="Lanche">
   
-  </center>
-  
-</div>
+  <h1>Lanches</h1>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Lanches</th>
+        <th>Pre&ccedilos</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>X-Burguer</td>
+        <td>R$ 5,00</td>
+      </tr>
+      <tr>
+        <td>X-Bacon</td>
+        <td>R$ 7,00</td>
+      </tr>
+	  <tr>
+        <td>X-Salada</td>
+        <td>R$ 6,00</td>
+      </tr>
+	  <tr>
+        <td>X-Bacon-egg</td>
+        <td>R$ 7,00</td>
+      </tr>
+	  <tr>
+        <td>X-Frango</td>
+        <td>R$ 7,00</td>
+      </tr>
+	  <tr>
+        <td>X-Burguer Especial I</td>
+        <td>R$ 8,00</td>
+      </tr>
+	  <tr>
+        <td>X-Burguer Especial II</td>
+        <td>R$ 9,00</td>
+      </tr>
+	  <tr>
+        <td>X-Tudo Especial</td>
+        <td>R$ 10,00</td>
+      </tr>
 
+    </tbody>
+  </table>
+	<h1>Panquecas</h1>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Panquecas</th>
+        <th>Pre&ccedilos</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Presunto e Queijo</td>
+        <td>R$ 10,00</td>
+      </tr>
+      <tr>
+        <td>Carne</td>
+        <td>R$ 12,00</td>
+      </tr>
+	  <tr>
+        <td>Frango</td>
+        <td>R$ 15,00</td>
+      </tr>
+	  <tr>
+        <td>Especial</td>
+        <td>R$ 18,00</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+</center>
 </body>
 </html>
+
