--- a/nova_geracao.html
+++ b/nova_geracao.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <title>Nova Gera&ccedil&atildeo - Lanches e Panquecas</title>
+  <title>Nova Geração - Lanches e Panquecas</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
@@ -13,7 +13,7 @@
 
 <nav class="navbar navbar-expand-sm bg-danger navbar-dark " >
   <!-- Brand -->
-  <a class="navbar-brand" href="#">Nova Gera&ccedil&atildeo   </a>
+  <a class="navbar-brand" href="#">Nova Geração   </a>
 <a class="navbar-brand" href="#">Lanches e Panquecas</a>
 
   <!-- Links -->
@@ -28,7 +28,7 @@
   
 <div class="container bg-danger text-white">
   <h3>Nova Gera&ccedil&atildeo - Lanches e Panquecas</br>
-  <small>Seja bem vindo ao nosso card&aacutepio online. Entregamos em todos os bairros de Itajub&aacute-MG</br>
+  <small>Seja bem vindo ao nosso cardápio online. Entregamos em todos os bairros de Itajubá-MG</br>
   
   </small></h3>
   <center>
@@ -39,7 +39,7 @@
     <thead>
       <tr>
         <th>Lanches</th>
-        <th>Pre&ccedilos</th>
+        <th>Preços</th>
       </tr>
     </thead>
     <tbody>
@@ -83,7 +83,7 @@
     <thead>
       <tr>
         <th>Panquecas</th>
-        <th>Pre&ccedilos</th>
+        <th>Preços</th>
       </tr>
     </thead>
     <tbody>
@@ -109,4 +109,5 @@
 </center>
 </body>
 </html>
+
 
