--- a/nova_geracao.html
+++ b/nova_geracao.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Nova Geração - Lanches e Panquecas</title>
+  <title>Lanches e Panquecas</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
@@ -109,5 +109,3 @@
 </center>
 </body>
 </html>
-
-
