--- a/nova_geracao.html
+++ b/nova_geracao.html
@@ -44,35 +44,37 @@
     </thead>
     <tbody>
       <tr>
-        <td>X-Burguer</td>
+	  
+        <td>X-Burguer <a href="#" data-toggle="tooltip" title="Pão, presunto, queijo, hamburguer e batata palha">Ingredientes</td></a>
         <td>R$ 5,00</td>
+
       </tr>
       <tr>
-        <td>X-Bacon</td>
+        <td>X-Bacon <a href="#" data-toggle="tooltip" title="Pão, presunto, queijo, hamburguer, bacon e batata palha">Ingredientes</td></a></td>
         <td>R$ 7,00</td>
       </tr>
 	  <tr>
-        <td>X-Salada</td>
+        <td>X-Salada <a href="#" data-toggle="tooltip" title="Pão, presunto, queijo, hamburguer, tomate e alface e batata palha">Ingredientes</td></a></td>
         <td>R$ 6,00</td>
       </tr>
 	  <tr>
-        <td>X-Bacon-egg</td>
+        <td>X-Bacon-egg <a href="#" data-toggle="tooltip" title="Pão, presunto, queijo, hamburguer, bacon, ovo e batata palha">Ingredientes</td></a></td>
         <td>R$ 7,00</td>
       </tr>
 	  <tr>
-        <td>X-Frango</td>
+        <td>X-Frango <a href="#" data-toggle="tooltip" title="Pão, presunto, queijo, hamburguer, frango e batata palha">Ingredientes</td></a></td>
         <td>R$ 7,00</td>
       </tr>
 	  <tr>
-        <td>X-Burguer Especial I</td>
+        <td>X-Burguer Especial I <a href="#" data-toggle="tooltip" title="Falta definir">Ingredientes</td></a></td>
         <td>R$ 8,00</td>
       </tr>
 	  <tr>
-        <td>X-Burguer Especial II</td>
+        <td>X-Burguer Especial II <a href="#" data-toggle="tooltip" title="Falta definir">Ingredientes</td></a></td>
         <td>R$ 9,00</td>
       </tr>
 	  <tr>
-        <td>X-Tudo Especial</td>
+        <td>X-Tudo Especial <a href="#" data-toggle="tooltip" title="Falta definir">Ingredientes</td></a></td>
         <td>R$ 10,00</td>
       </tr>
 
@@ -82,30 +84,36 @@
   <table class="table">
     <thead>
       <tr>
-        <th>Panquecas</th>
-        <th>Preços</th>
+        <th>Panquecas </th>
+        <th>Preços </th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>Presunto e Queijo</td>
+        <td>Presunto e Queijo <a href="#" data-toggle="tooltip" title="Falta definir">Ingredientes</td></a></td>
         <td>R$ 10,00</td>
       </tr>
       <tr>
-        <td>Carne</td>
+        <td>Carne <a href="#" data-toggle="tooltip" title="Falta definir">Ingredientes</td></a></td>
         <td>R$ 12,00</td>
       </tr>
 	  <tr>
-        <td>Frango</td>
+        <td>Frango <a href="#" data-toggle="tooltip" title="Falta definir">Ingredientes</td></a></td>
         <td>R$ 15,00</td>
       </tr>
 	  <tr>
-        <td>Especial</td>
+        <td>Especial <a href="#" data-toggle="tooltip" title="Falta definir">Ingredientes</td></a></td>
         <td>R$ 18,00</td>
       </tr>
     </tbody>
   </table>
 </div>
 </center>
+<script>
+$(document).ready(function(){
+    $('[data-toggle="tooltip"]').tooltip();   
+});
+</script>
 </body>
 </html>
+
