--- a/nova_geracao.html
+++ b/nova_geracao.html
@@ -45,20 +45,20 @@
     <tbody>
       <tr>
 	  
-        <td>X-Burguer <a href="#" data-toggle="tooltip" title="Pão, presunto, queijo, hamburguer e batata palha">Ingredientes</td></a>
+        <td>X-Burguer <a href="#" data-toggle="tooltip" title="Pão, presunto, queijo, hamburguer,ovo e batata palha">Ingredientes</td></a>
         <td>R$ 5,00</td>
 
       </tr>
       <tr>
-        <td>X-Bacon <a href="#" data-toggle="tooltip" title="Pão, presunto, queijo, hamburguer, bacon e batata palha">Ingredientes</td></a></td>
+        <td>X-Bacon <a href="#" data-toggle="tooltip" title="Pão, presunto, queijo, hamburguer, ovo, bacon e batata palha">Ingredientes</td></a></td>
         <td>R$ 7,00</td>
       </tr>
 	  <tr>
-        <td>X-Salada <a href="#" data-toggle="tooltip" title="Pão, presunto, queijo, hamburguer, tomate e alface e batata palha">Ingredientes</td></a></td>
+        <td>X-Salada <a href="#" data-toggle="tooltip" title="Pão, presunto, queijo, hamburguer, ovo, tomate, alface, milho verde e batata palha">Ingredientes</td></a></td>
         <td>R$ 6,00</td>
       </tr>
 	  <tr>
-        <td>X-Bacon-egg <a href="#" data-toggle="tooltip" title="Pão, presunto, queijo, hamburguer, bacon, ovo e batata palha">Ingredientes</td></a></td>
+        <td>X-Bacon-egg <a href="#" data-toggle="tooltip" title="Pão, presunto, queijo, hamburguer, bacon, ovo, alface, tomate, milho verde e batata palha">Ingredientes</td></a></td>
         <td>R$ 7,00</td>
       </tr>
 	  <tr>
