--- a/nova_geracao.html
+++ b/nova_geracao.html
@@ -62,15 +62,15 @@
         <td>R$ 7,00</td>
       </tr>
 	  <tr>
-        <td>X-Frango <a href="#" data-toggle="tooltip" title="Pão, presunto, queijo, hamburguer, frango e batata palha">Ingredientes</td></a></td>
+        <td>X-Frango <a href="#" data-toggle="tooltip" title="Pão, presunto, queijo, hamburguer, filé de frango e batata palha">Ingredientes</td></a></td>
         <td>R$ 7,00</td>
       </tr>
 	  <tr>
-        <td>X-Burguer Especial I <a href="#" data-toggle="tooltip" title="Falta definir">Ingredientes</td></a></td>
+        <td>X-Burguer Especial I <a href="#" data-toggle="tooltip" title="Pão, presunto, queijo, hamburguer, filé de frango, ovo, chedar e batata palha">Ingredientes</td></a></td>
         <td>R$ 8,00</td>
       </tr>
 	  <tr>
-        <td>X-Burguer Especial II <a href="#" data-toggle="tooltip" title="Falta definir">Ingredientes</td></a></td>
+        <td>X-Burguer Especial II <a href="#" data-toggle="tooltip" title="Pão, presunto, queijo, hamburguer, filé de frango, ovo, catupiry e batata palha">Ingredientes</td></a></td>
         <td>R$ 9,00</td>
       </tr>
 	  <tr>
@@ -116,4 +116,3 @@ $(document).ready(function(){
 </script>
 </body>
 </html>
-
