--- a/nova_geracao.html
+++ b/nova_geracao.html
@@ -74,7 +74,7 @@
         <td>R$ 9,00</td>
       </tr>
 	  <tr>
-        <td>X-Tudo Especial <a href="#" data-toggle="tooltip" title="Falta definir">Ingredientes</td></a></td>
+        <td>X-Tudo Especial <a href="#" data-toggle="tooltip" title="Pão, presunto, queijo, hamburguer, ovo, catupiry, chedar, alface, tomate, milho verde e batata palha">Ingredientes</td></a></td>
         <td>R$ 10,00</td>
       </tr>
 
@@ -90,19 +90,19 @@
     </thead>
     <tbody>
       <tr>
-        <td>Presunto e Queijo <a href="#" data-toggle="tooltip" title="Falta definir">Ingredientes</td></a></td>
+        <td>Presunto e Queijo <a href="#" data-toggle="tooltip" title="Presunto, queijo, molho e batata palha">Ingredientes</td></a></td>
         <td>R$ 10,00</td>
       </tr>
       <tr>
-        <td>Carne <a href="#" data-toggle="tooltip" title="Falta definir">Ingredientes</td></a></td>
+        <td>Carne <a href="#" data-toggle="tooltip" title="Presunto, queijo, carne moída, milho, ervilha, cebola, catupiry, molho e batata palha">Ingredientes</td></a></td>
         <td>R$ 12,00</td>
       </tr>
 	  <tr>
-        <td>Frango <a href="#" data-toggle="tooltip" title="Falta definir">Ingredientes</td></a></td>
+        <td>Frango <a href="#" data-toggle="tooltip" title="Presunto, queijo, frango desfiado, tomate, cebola, milho, ervilha, catupiry, molho e batata palha">Ingredientes</td></a></td>
         <td>R$ 15,00</td>
       </tr>
 	  <tr>
-        <td>Especial <a href="#" data-toggle="tooltip" title="Falta definir">Ingredientes</td></a></td>
+        <td>Especial <a href="#" data-toggle="tooltip" title='Presunto, queijo, bacon, tomate, cebola, milho, ervilha, "catupiry ou chedar", "carne moída ou frango desfiado", molho e batata palha'>Ingredientes</td></a></td>
         <td>R$ 18,00</td>
       </tr>
     </tbody>
