--- a/nova_geracao.html
+++ b/nova_geracao.html
@@ -28,10 +28,18 @@
   
 <div class="container bg-danger text-white">
   <h3>Nova Gera&ccedil&atildeo - Lanches e Panquecas</br>
-  <small>Seja bem vindo ao nosso cardápio online. Entregamos em todos os bairros de Itajubá-MG</br>
+  <small>Seja bem vindo ao nosso cardápio online. Entregamos em todos os bairros de Itajubá-MG.</br>
   
   </small></h3>
   <center>
+  <h3><small>
+  <img src="https://scontent.fbsb9-1.fna.fbcdn.net/v/t1.0-9/32862189_1928314840513615_9005257740544638976_n.jpg?_nc_cat=0&oh=b3c6b4d7e5f173f7aa1f9b0c7d1065fb&oe=5B8D3400" class="img-rounded" alt="Telefone fixo" height="20">
+  (35) 3623-4569  
+    <img src="https://scontent.fbsb9-1.fna.fbcdn.net/v/t1.0-9/32751463_1928323350512764_1423148309861629952_n.jpg?_nc_cat=0&oh=f3c162d7d979187a82b0d6178b61e475&oe=5B86696A" class="img-rounded" alt="WhatsApp" height="20">
+	(35) 98701-3683  
+	<img src="https://scontent.fbsb9-1.fna.fbcdn.net/v/t1.0-9/32751463_1928323350512764_1423148309861629952_n.jpg?_nc_cat=0&oh=f3c162d7d979187a82b0d6178b61e475&oe=5B86696A" class="img-rounded" alt="WhatsApp" height="20">
+	(35) 99212-6354
+	</small></h3>
 <img src="https://scontent.fbsb9-1.fna.fbcdn.net/v/t1.0-9/32440497_1928166683861764_1434304276959592448_n.jpg?_nc_cat=0&oh=f5718c5fe4d9f1541b739cb05b7ba03d&oe=5B99D290" class="rounded img-fluid" alt="Lanche">
   
   <h1>Lanches</h1>
